# resumetool

./: .gitignore  AGENTS.md  AI_START.md  DEMO_RESULTS.md  LICENSE  Makefile  README.md  USAGE_QUICK.md  USER_GUIDE.md  index.html  plan.md  pyproject.toml  run.sh
.github/workflows/: pages.yml
demo/: index.html
scripts/: README.md  __init__.py  build_static.py  fix_pep668.sh  seed_demo.py
src/resumetool/: cli.py  config.py  types.py
src/resumetool/ai/: openai_client.py
src/resumetool/analysis/: resume_parser.py
src/resumetool/database/: __init__.py  models.py  session.py
src/resumetool/discovery/: job_search.py
src/resumetool/employer/: models.py
src/resumetool/feedback/: loop.py
src/resumetool/llm/: __init__.py  client.py  guards.py  provider.py
src/resumetool/notifications/: __init__.py  email.py  mailer.py
src/resumetool/parsers/: __init__.py  docx.py  pdf.py  txt.py
src/resumetool/pipelines/: __init__.py  tailor.py
src/resumetool/render/: __init__.py  docx.py  html.py  pdf.py
src/resumetool/server/: app.py
src/resumetool/server/routes/: candidates.py  dashboard.py  feedback.py  jobs.py  landing.py  screening.py
src/resumetool/server/static/: demo.css  landing.css
src/resumetool/server/templates/: base.html  candidate.html  (+8 more)
src/resumetool/triage/: behavioral.py  pipeline.py  router.py  scoring.py  screening.py
static/: demo.css  landing.css  portal.css
tests/: conftest.py  test_notifications.py  test_parsers.py  test_pipeline.py  test_render.py  test_routes.py  test_seeder.py
tests/fixtures/: sample_jd.txt  sample_resume.txt
(+2 files in other folders)
