[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resumetool"
version = "0.1.0"
description = "CLI and minimal web UI to tailor resumes to job descriptions"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ResumeTool Team" }
]
dependencies = [
  "typer[all]~=0.12",
  "pydantic~=2.7", 
  "pydantic-settings~=2.3",
  "jinja2~=3.1",
  "python-docx~=1.1",
  "pdfminer.six==20231228",
  "pypdf~=4.0",
  "structlog~=24.1",
  "openai>=1.0.0",
  "scikit-learn~=1.3",
  "beautifulsoup4~=4.12",
  "requests~=2.31",
  "sqlalchemy~=2.0",
  "fastapi~=0.104",
  "uvicorn~=0.24",
  "aiofiles~=23.2"
]

[project.optional-dependencies]
render = [
  "weasyprint~=62.3"
]
scraping = [
  "selenium~=4.15",
  "webdriver-manager~=4.0"
]
production = [
  "psycopg2-binary~=2.9",
  "redis~=5.0",
  "celery~=5.3"
]
dev = [
  "pytest~=8.3",
  "pytest-asyncio~=0.23", 
  "httpx~=0.27",
  "ruff~=0.6.9",
  "black~=23.11",
  "pytest-cov~=4.1"
]

[project.scripts]
resumetool = "resumetool.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["resumetool*"]
